--- a/.github/workflows/ci-cd-k3s.yml
+++ b/.github/workflows/ci-cd-k3s.yml
@@ -8,48 +8,77 @@ on:
     branches:
       - master
 
+env:
+  IMAGE_NAME: myflaskapp
+  IMAGE_TAG: ${{ github.sha }}
+  APP_FOLDER: Learn-Devops/tech-vault-q8
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      # Checkout repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
+      # Install dependencies dari subfolder
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ${{ env.APP_FOLDER }}/requirements.txt
+
+      # Run unit tests
       - name: Run tests
-        run: pytest tests/
+        run: pytest ${{ env.APP_FOLDER }}/tests/
+
+      # Build Docker image dari subfolder
       - name: Build Docker image
-        run: docker build -t myflaskapp:${{ github.sha }} .
-      - name: Login Docker Hub
+        run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.APP_FOLDER }}
+
+      # Login Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Push Docker image ke Docker Hub
       - name: Push Docker image
         run: |
-          docker tag myflaskapp:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ github.sha }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ github.sha }}
+          docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
   deploy-to-k3s:
     runs-on: ubuntu-latest
     needs: build-and-test
     if: github.ref == 'refs/heads/master'
+
     steps:
-      - uses: actions/checkout@v3
+      # Checkout repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Setup kubectl
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.30.0'
+
+      # Configure Kubeconfig dari secret
       - name: Configure Kubeconfig
         run: |
           echo "${{ secrets.K3S_KUBECONFIG }}" > kubeconfig
           export KUBECONFIG=$PWD/kubeconfig
+
+      # Deploy ke K3s, update image deployment
       - name: Deploy to K3s
         run: |
-          kubectl set image deployment/myflaskapp myflaskapp=${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ github.sha }} -n default
+          kubectl set image deployment/myflaskapp myflaskapp=${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ env.IMAGE_TAG }} -n default
           kubectl rollout status deployment/myflaskapp -n default
