--- a/.github/workflows/ci-cd-k3s.yml
+++ b/.github/workflows/ci-cd-k3s.yml
@@ -11,7 +11,7 @@ on:
 env:
   IMAGE_NAME: myflaskapp
   IMAGE_TAG: ${{ github.sha }}
-  APP_FOLDER: Learn-Devops/tech-vault-q8
+  APP_FOLDER: .
 
 jobs:
   build-and-test:
@@ -28,7 +28,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Install dependencies dari subfolder
+      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -38,7 +38,7 @@ jobs:
       - name: Run tests
         run: pytest ${{ env.APP_FOLDER }}/tests/
 
-      # Build Docker image dari subfolder
+      # Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.APP_FOLDER }}
 
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Push Docker image ke Docker Hub
+      # Push Docker image
       - name: Push Docker image
         run: |
           docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
@@ -77,7 +77,7 @@ jobs:
           echo "${{ secrets.K3S_KUBECONFIG }}" > kubeconfig
           export KUBECONFIG=$PWD/kubeconfig
 
-      # Deploy ke K3s, update image deployment
+      # Deploy ke K3s
       - name: Deploy to K3s
         run: |
           kubectl set image deployment/myflaskapp myflaskapp=${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ env.IMAGE_TAG }} -n default
