--- a/.github/workflows/ci-cd-k3s.yml
+++ b/.github/workflows/ci-cd-k3s.yml
@@ -21,6 +21,8 @@ jobs:
       # Checkout repository
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          submodules: true  # jika menggunakan submodule
 
       # Setup Python
       - name: Setup Python
@@ -28,57 +30,22 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Install dependencies
+      # Install dependencies dari subfolder
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ${{ env.APP_FOLDER }}/requirements.txt
 
-      # Run unit tests
+      # Run unit tests dari subfolder
       - name: Run tests
         run: pytest ${{ env.APP_FOLDER }}/tests/
 
-      # Build Docker image
+      # Build Docker image dari subfolder
       - name: Build Docker image
         run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.APP_FOLDER }}
 
       # Login Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        w
 
-      # Push Docker image
-      - name: Push Docker image
-        run: |
-          docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-
-  deploy-to-k3s:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.ref == 'refs/heads/master'
-
-    steps:
-      # Checkout repository
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Setup kubectl
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.30.0'
-
-      # Configure Kubeconfig dari secret
-      - name: Configure Kubeconfig
-        run: |
-          echo "${{ secrets.K3S_KUBECONFIG }}" > kubeconfig
-          export KUBECONFIG=$PWD/kubeconfig
-
-      # Deploy ke K3s
-      - name: Deploy to K3s
-        run: |
-          kubectl set image deployment/myflaskapp myflaskapp=${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ env.IMAGE_TAG }} -n default
-          kubectl rollout status deployment/myflaskapp -n default
