--- a/.github/workflows/ci-cd-k3s.yml
+++ b/.github/workflows/ci-cd-k3s.yml
@@ -18,34 +18,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repository
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          submodules: true  # jika menggunakan submodule
+          submodules: true
 
-      # Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # Install dependencies dari subfolder
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ${{ env.APP_FOLDER }}/requirements.txt
 
-      # Run unit tests dari subfolder
       - name: Run tests
         run: pytest ${{ env.APP_FOLDER }}/tests/
 
-      # Build Docker image dari subfolder
       - name: Build Docker image
         run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ env.APP_FOLDER }}
 
-      # Login Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v2
-        w
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image
+        run: |
+          docker tag ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+  deploy-to-k3s:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'v1.30.0'
+
+      - name: Configure Kubeconfig
+        run: |
+          echo "${{ secrets.K3S_KUBECONFIG }}" > kubeconfig
+          export KUBECONFIG=$PWD/kubeconfig
+
+      - name: Deploy to K3s
+        run: |
+          kubectl set image deployment/myflaskapp myflaskapp=${{ secrets.DOCKER_USERNAME }}/myflaskapp:${{ env.IMAGE_TAG }} -n default
+          kubectl rollout status deployment/myflaskapp -n default
 
