--- a/.github/workflows/ci-cd-k3s.yml
+++ b/.github/workflows/ci-cd-k3s.yml
@@ -65,10 +65,13 @@ jobs:
         with:
           version: 'v1.30.0'
 
-      - name: Configure Kubeconfig
+      - name: Configure Kubeconfig from base64
         run: |
-          echo "${{ secrets.K3S_KUBECONFIG }}" > kubeconfig
+          echo "${{ secrets.K3S_KUBECONFIG_B64 }}" | base64 --decode > kubeconfig
           export KUBECONFIG=$PWD/kubeconfig
+
+      - name: Test K3s connection
+        run: kubectl get nodes
 
       - name: Deploy to K3s
         run: |
