--- a/.github/workflows/ci-cd-k3s.yml
+++ b/.github/workflows/ci-cd-k3s.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Configure Kubeconfig from base64
         run: |
-          echo "${{ secrets.K3S_KUBECONFIG_B64 }}" | base64 --decode > kubeconfig
+          echo "${{ secrets.K3S_KUBECONFIG }}" | base64 --decode > kubeconfig
           export KUBECONFIG=$PWD/kubeconfig
 
       - name: Test K3s connection
